--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - run: 
           command: |
             set -xe
-            sudo apt-get yq update
+            sudo apt-get -yq update
             sudo apt-get -yq install r-base
             sudo apt-get clean
             sudo rm -rf /var/lib/apt/lists/*
