--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
               curl -skL https://github.com/lballabio/QuantLib/releases/download/QuantLib-v1.14/QuantLib-1.14.tar.gz | tar zxf -
               (cd QuantLib-1.14 ; ./autogen.sh ; ./configure --prefix=$HOME/.local --enable-intraday ; make install)
             fi
-            sudo Rscript -e 'install.packages("RQuantLib", dependencies=TRUE)'
+            sudo Rscript -e 'install.packages("RQuantLib")'
             curl -skL https://github.com/eddelbuettel/rquantlib/archive/master.zip -o rquantlib.zip
             unzip -o rquantlib.zip
             rm -f rquantlib.zip
